[tool.poetry]
name = "diy-seeingmonitor"
version = "0.1.0"
description = "Create a Do-It-Yourself Seeing Monitor"
authors = ["Jens Scheidtmann <Jens.Scheidtmann@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"
package-mode = fals
[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocs-panzoom-plugin = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
